[project]
name = "meetingpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "openai>=1.0.0",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
